styles/user_management_mobile.css
#createAccountPanel {
    width: 275px;
}

#createAccountBody {
    width: 275px;
}

#userForm input[type="password"] {
    margin: 2% 2%;
    width: 170px;
}
#userForm input[type="text"] {
    margin: 2% 2%;
    width: 170px;
}

#displayPassword {
    padding: 0 0 0 5px;
}

#matchingPasswords  {
    visibility: hidden !important;
    height: 0;
    width: 0;
}
#accountDetailsBody {
    width: auto;
    flex-direction: column;
}

#accountDetailsPanel {
    width:94%;
    margin-bottom: 3%;
}
#accountSocialsPanel {
    width:94%;
}
#passwordChangePanel {
    width:94%;
}

